vmworld-scenario/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nsx-demo-ingress
  namespace: vmworld
  labels:
    app: nsx-redis
    tier: frontend
spec:
  rules:
  - host: nsx.demo.corp.local
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
